# fuzzy

./: flake.nix  pyproject.toml
levenshtein/: __init__.py  main.py
levenshtein/tests/: test_main.py
levenshtein_matrix/: __init__.py  main.py  test_levenshtein_matrix.py  tests.py
